--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -25,3 +25,7 @@ services:
         identifier: 'ext-loginlink/modify-recordlist'
         event: TYPO3\CMS\Recordlist\Event\ModifyRecordListRecordActionsEvent
         method: 'modifyRecordActions'
+      - name: event.listener
+        identifier: 'ext-loginlink/modify-recordlistV12'
+        event: TYPO3\CMS\Backend\RecordList\Event\ModifyRecordListRecordActionsEvent
+        method: 'modifyRecordActionsV12'
