--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -3,19 +3,17 @@ services:
     autowire: true
     autoconfigure: true
     public: false
-    bind:
-      $loginlinkExtensionConfiguration: '@extensionconfiguration.loginlink'
 
   GeorgRinger\LoginLink\:
     resource: '../Classes/*'
+
+  GeorgRinger\LoginLink\Repository\LoginLinkRepository:
+    public: true
 
   GeorgRinger\LoginLink\Service\TokenGenerator:
     public: true
 
   GeorgRinger\LoginLink\Service\Validation:
-    public: true
-
-  GeorgRinger\LoginLink\Service\SendMail:
     public: true
 
   GeorgRinger\LoginLink\Controller\TokenController:
@@ -31,11 +29,3 @@ services:
         identifier: 'ext-loginlink/modify-recordlistV12'
         event: TYPO3\CMS\Backend\RecordList\Event\ModifyRecordListRecordActionsEvent
         method: 'modifyRecordActionsV12'
-
-  extensionconfiguration.loginlink:
-    class: 'array'
-    factory:
-      - '@TYPO3\CMS\Core\Configuration\ExtensionConfiguration'
-      - 'get'
-    arguments:
-      - 'login_link'
